# conways_c

./: .gitignore  CMakeLists.txt  README.md  asm_count_alive_neighbours_test.cpp  calculate_next_board.c  calculate_next_board.cpp  calculate_next_board_test.cpp  conways.c  conways.cpp  count_alive_neighbours.c  count_alive_neighbours.cpp  count_alive_neighbours_test.cpp  debugging.md  hello_world.c  is_index_out_of_bounds.c  is_index_out_of_bounds.cpp  is_index_out_of_bounds_test.cpp  is_over_populated.c  is_over_populated.cpp  is_over_populated_test.cpp  is_ressurectable.cpp  is_ressurectable_test.cpp  is_under_populated.cpp  is_under_populated_test.cpp  main.cpp  malloc.md  mytest  next_cell_state.c  next_cell_state.cpp  next_cell_state_test.cpp  pointers.c  pointers.cpp  pointers.md  setup.md  test.cpp
inc/: calculate_next_board.h  count_alive_neighbours.h  is_index_out_of_bounds.h  is_over_populated.h  is_ressurectable.h  is_under_populated.h  next_cell_state.h  state_machine.hpp
